change css to see if the change has been propagated

--- a/web/public/css/default.css
+++ b/web/public/css/default.css
@@ -18,7 +18,7 @@ body {
 	margin: 5px 15%;
 	border-width: 2px;
 	border-style: solid;
-	border-color: black;
+	border-color: lightblue;
 	border-radius: 8px;
 }
 
