Tweaked the css and header file a lil' bit

--- a/web/public/css/default.css
+++ b/web/public/css/default.css
@@ -2,6 +2,7 @@ body {
 	background: linear-gradient(to right, silver , white, silver); /* Standard syntax */
 }
 
+/** Structure */
 #header {
 	padding: 20px;
 	background: lightblue;
@@ -32,4 +33,22 @@ body {
 	border-radius: 8px;
 }
 
+/** links */
+#header a {
+	color: black;
+	background: lightblue;
+	padding: 4px 15px;
+	text-decoration: none;
+	font-size: 15px;
+	font-weight: bolder;
+	border-width: 2px;
+	border-style: solid;
+	border-radius: 4px;
+	border-color: #436fac;
+}
+
+#header a:hover {
+	background: #436fac;
+	color: white;
+}
 
